<resources>
    <string name="app_name">Notes</string>

    <!--MAIN_MENU+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_user_name">User</string>
    <string name="nav_header_user_email">user@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_to_do_lists">To do lists</string>
    <string name="menu_shopping_list">Shopping lists</string>
    <string name="menu_settings">Settings</string>


    <string name="title_search">Write do you want to search</string>
    <string name="general_folder">All notes</string>

    <!--SETTINGS+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
    <string name="pref_note_category_key">note</string>
    <string name="pref_note_category_title">Note</string>
    <string name="pref_notifications_category_key">notifications</string>
    <string name="pref_notifications_category_title">Notifications</string>
    <string name="pref_theme_category_key">theme</string>
    <string name="pref_theme_category_title">Theme</string>
    <string name="pref_application_category_key">application</string>
    <string name="pref_application_category_title">Application</string>


    <string name="pref_font_size_key">Size</string>
    <string name="pref_font_size_title">Font size</string>
    <string-array name="pref_font_size_titles">
        <item>Small</item>
        <item>Normal</item>
        <item>Big</item>
        <item>Very big</item>
    </string-array>
    <string-array name="pref_font_size_values">
        <item>12</item>
        <item>16</item>
        <item>22</item>
        <item>24</item>
    </string-array>

    <string name="pref_font_style_key">Style</string>
    <string name="pref_font_style_title">Style of text</string>
    <string-array name="pref_font_style_titles">
        <item>Normal</item>
        <item>Bold</item>
        <item>Italic</item>
        <item>Italic Bold</item>
    </string-array>
    <string-array name="pref_font_style_values">
        <item>NORMAL</item>
        <item>BOLD</item>
        <item>ITALIC</item>
        <item>ITALIC BOLD</item>
    </string-array>

    <string name="pref_show_data_key">Date</string>
    <string name="pref_show_data_title">Show data created note</string>

    <string name="pref_sort_notes_key">Sort</string>
    <string name="pref_sort_notes_title">Choose how sort notes</string>
    <string-array name="pref_sort_notes_titles">
        <item>Data created</item>
        <item>Data update</item>
    </string-array>
    <string-array name="pref_sort_notes_values">
        <item>Data created</item>
        <item>Data update</item>
    </string-array>

    <string name="pref_show_notification_key">show_notification</string>
    <string name="pref_show_notification_title">On/Of notification</string>

    <string name="pref_change_theme_key">theme</string>
    <string name="pref_change_theme_title">Day/night theme</string>

    <string name="pref_version_key">version</string>
    <string name="pref_version_title">Version: 0.9.46</string>


    <string-array name="color_text">
        <item>Black</item>
        <item>White</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="style_text">
        <item>Bold</item>
        <item>Normal</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="change_text">
        <item>Color</item>
        <item>Style of text</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_add_folder">Add New Folder</string>"
    <string name="massage_add_folder">Write name folder"</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
