<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="@string/pref_note_category_key"
        android:title="@string/pref_note_category_title">

        <ListPreference
            android:key="@string/pref_font_size_key"
            android:title="@string/pref_font_size_title"
            android:summary="%s"
            android:defaultValue="1"
            android:entries="@array/pref_font_size_titles"
            android:entryValues="@array/pref_font_size_values" />

        <ListPreference
            android:key="@string/pref_font_style_key"
            android:title="@string/pref_font_style_title"
            android:summary="%s"
            android:defaultValue="1"
            android:entries="@array/pref_font_style_titles"
            android:entryValues="@array/pref_font_style_values" />

        <ListPreference
            android:key="@string/pref_sort_notes_key"
            android:title="@string/pref_sort_notes_title"
            android:summary="%s"
            android:defaultValue="1"
            android:entries="@array/pref_sort_notes_titles"
            android:entryValues="@array/pref_sort_notes_values" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_show_data_key"
            android:title="@string/pref_show_data_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_notifications_category_title"
        android:key="@string/pref_notifications_category_key">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_show_notification_key"
            android:title="@string/pref_show_notification_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_theme_category_title"
        android:key="@string/pref_theme_category_key">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_show_notification_key"
            android:title="@string/pref_change_theme_title" />
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_application_category_title"
        android:key="@string/pref_application_category_key">
        <Preference android:title="@string/pref_version_title" >

        </Preference>
        <Preference android:title="Instagram" >
            <intent android:action="android.intent.action.VIEW"
                android:data="https://www.instagram.com/roman_kutylo/" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>